2008-04-16  Matthias Clasen  <mclasen@redhat.com>

	Partically revert the last commit after realizing that
	xdg_mime_media_type_equal doesn't have to init at all.

	* xdgmime.h:
	* xdgmime.c: Get rid of _xdg_mime_media_type_equal

	* xdgmimecache.c: Use xdg_mime_media_type_equal
					
2008-04-16  Matthias Clasen  <mclasen@redhat.com>

	Avoid possible memory corruption in xdgmime, fd.o bug 12512,
	reported by Joe Shaw and Federico Mena Quintero.

	* xdgmime.c(_xdg_mime_media_type_equal): Implement.
	(xdg_mime_media_type_equal): Turn into a wrapper around the
	_-prefixed version.

	* xdgmimecache.c: Use the _-prefixed versions of
	comparison functions throughout.

2008-03-12  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.9 ===

2008-02-12  Matthias Clasen  <mclasne@redhat.com>

	* === Released 2.12.8 ===

2008-01-29  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.7 ===

2008-01-28  Matthias Clasen  <mclasen@redhat.com>
	
	* === Released 2.12.6 ===

2008-01-08  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.5 ===

2008-01-08  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.4 ===

2007-12-04  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.3 ===

2007-11-26  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.2 ===

2007-10-16  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.12.1 ===

2007-09-13  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.0 ===

2007-07-25  Alexander Larsson  <alexl@redhat.com>

        * xdgmimealias.h:
        * xdgmimecache.h:
        * xdgmimeparent.h:
	Mark more internal symbols for prefixing

2007-07-21  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.11.6 ===

2007-07-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.11.5 ===

2007-06-19  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.11.4 ===

2007-06-15  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.11.3 ===

2007-06-06  Matthias Clasen  <mclasen@redhat.com>
